--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-d3-cloud": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-wordcloud": "^1.2.7",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
