--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bulma": "^0.9.2",
+    "canvasjs": "^1.8.3",
+    "d3-selection": "^1.4.2",
     "react": "^17.0.2",
     "react-d3-cloud": "^0.7.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-wordcloud": "^1.2.7",
     "web-vitals": "^1.1.1"
